# tracetool

./: Cargo.toml  README.md  plots_schema.json
docs/: plot-config.md
examples/: db_ping.yaml  item_show_count.yaml  view_execution_time_median.yaml
src/: main.rs
src/command/: build_view_sql_index.rs  compute_overlap.rs  compute_overlap_pca.rs  form_statistics.rs  get_cell.rs  import.rs  match_query_view.rs  mod.rs  normalize_sql.rs  plot.rs  unit_conversion.rs  view_statistics.rs
src/config/: mod.rs  yaml.rs
src/plot/: context.rs  count_scatter_plot.rs  mod.rs  overlap_plot.rs  time_scatter_plot.rs
src/util/: conversions.rs  filter.rs  load.rs  mod.rs  normalize_sql.rs  overlap.rs  parse_csv.rs  plot.rs  read_stdin_string.rs  statistics.rs  type_cast.rs
