[package]
name = "tracetool"
version = "1.0.0"
edition = "2021"

[dependencies]
lazy_static = "1"
regex = "1"
csv = "1"
clap = "4"
shellexpand = "3"
serde = "1"
bytesize = "1"
rusqlite = { version = "0.30.0", features = ["bundled"] }
chrono = "0.4.33"
indicatif = "0.17.7"
plotly = "0.8.4"
serde_yaml = "0.9.31"
ndarray = "0.15.6"
nalgebra = "0.32.3"
num-traits = "0.2.17"
sqlparser = { version = "0.43.1", features = ["default", "visitor"] }

[profile.release]
strip = true
lto = true
